--- a/sass/skins/indigo_ingot.scss
+++ b/sass/skins/indigo_ingot.scss
@@ -1,7 +1,22 @@
+@mixin theme-variables($theme) {
+    @if $theme =='light' {
+        --primary-color: #1460bd; // Contrast ratio: 6.1:1
+    }
+    @else if $theme == 'dark' {
+        --primary-color: #e6c212; // Contrast ratio: 9.48:1
+    }
+}
+
 :root {
-    --primary-color: #1460bd; // Contrast ratio: 6.1:1
+    @include theme-variables('light');
 }
 
 [data-theme='dark'] {
-    --primary-color: #e6c212; // Contrast ratio: 9.48:1
+    @include theme-variables('dark');
+}
+
+@media (prefers-color-scheme: dark) {
+    :root:not([data-theme='light']) {
+        @include theme-variables('dark');
+    }
 }
